syntax = "proto3";

option java_multiple_files = true;

package org.hypertrace.config.service.v1;

import "google/protobuf/struct.proto";

service ConfigService {
  // Overrides the specified config with the config provided and upserts the
  // provided config into the store. Also returns the config which is upserted.
  rpc UpsertConfig(UpsertConfigRequest) returns (UpsertConfigResponse) {}

  // Gets the config for the specified request
  rpc GetConfig(GetConfigRequest) returns (GetConfigResponse) {}

  // Gets all the configs(i.e. across all the contexts) for the specified request
  rpc GetAllConfigs(GetAllConfigsRequest) returns (GetAllConfigsResponse) {}

  // Deletes the config for the specified request
  rpc DeleteConfig(DeleteConfigRequest) returns (DeleteConfigResponse) {}

  rpc UpsertAllConfigs(UpsertAllConfigsRequest) returns (UpsertAllConfigsResponse) {}

  rpc DeleteConfigs(DeleteConfigsRequest) returns (DeleteConfigsResponse) {}
}

message UpsertConfigRequest {
  // required - name of the resource associated with the config
  string resource_name = 1;

  // required - namespace with which the config resource is associated
  string resource_namespace = 2;

  // required - config value to be upserted
  google.protobuf.Value config = 3;

  // optional - only required if config applies to a specific context.
  // If empty, specified config is associated with a default context.
  string context = 4;

  // user details
  UserDetails user_details = 5;
}

message UpsertConfigResponse {
  // config value upserted into the store
  google.protobuf.Value config = 1;

  // timestamp (in milliseconds since epoch) at which this config was created
  int64 creation_timestamp = 2;

  // timestamp (in milliseconds since epoch) at which this config was last updated
  int64 update_timestamp = 3;

  // prev version of config value in the store
  optional google.protobuf.Value prev_config = 4;

  // user details
  UserDetails user_details = 5;
}

message GetConfigRequest {
  // required - name of the resource associated with the config
  string resource_name = 1;

  // required - namespace with which the config resource is associated
  string resource_namespace = 2;

  // optional; order matters - specify the contexts in the order of increasing
  // priority. Example: ["service1", "api1"].
  // Default context is implicitly appended to the beginning of the list.
  repeated string contexts = 3;
}

message GetConfigResponse {
  // config value returned for the specified request
  google.protobuf.Value config = 1;

  // timestamp (in milliseconds since epoch) at which this config was created
  int64 creation_timestamp = 2;

  // timestamp (in milliseconds since epoch) at which this config was last updated
  int64 update_timestamp = 3;
}

message GetAllConfigsRequest {
  // required - name of the resource associated with the config
  string resource_name = 1;

  // required - namespace with which the config resource is associated
  string resource_namespace = 2;
}

message GetAllConfigsResponse {
  // list of config values along with the associated contexts, sorted in the descending order of their creation time
  repeated ContextSpecificConfig context_specific_configs = 1;
}

message ContextSpecificConfig {
  // context associated with the below config
  string context = 1;

  // config value which applies to the above context
  google.protobuf.Value config = 2;

  // timestamp (in milliseconds since epoch) at which this config was created
  int64 creation_timestamp = 3;

  // timestamp (in milliseconds since epoch) at which this config was last updated
  int64 update_timestamp = 4;
}

message DeleteConfigRequest {
  // required - name of the resource associated with the config
  string resource_name = 1;

  // required - namespace with which the config resource is associated
  string resource_namespace = 2;

  // optional - only required if config applies to a specific context.
  // If empty, specified config is associated with a default context.
  string context = 3;
}

message DeleteConfigResponse {
  ContextSpecificConfig deleted_config = 1;
}

message DeleteConfigsRequest {
  repeated ConfigToDelete configs = 1;

  message ConfigToDelete {
    // required - name of the resource associated with the config
    string resource_name = 1;
    // required - namespace with which the config resource is associated
    string resource_namespace = 2;
    // optional - only required if config applies to a specific context.
    // If empty, specified config is associated with a default context.
    string context = 3;
  }
}

message DeleteConfigsResponse {
  repeated ContextSpecificConfig deleted_configs = 1;
}

message UpsertAllConfigsRequest {
  repeated ConfigToUpsert configs = 1;
  UserDetails user_details = 2;
  message ConfigToUpsert {
    string resource_name = 1;
    string resource_namespace = 2;
    string context = 3;
    google.protobuf.Value config = 4;
  }
}

message UpsertAllConfigsResponse {
  repeated UpsertedConfig upserted_configs = 1;
  UserDetails user_details = 2;

  message  UpsertedConfig {
    string context = 1;
    google.protobuf.Value config = 2;
    int64 creation_timestamp = 3;
    int64 update_timestamp = 4;
    optional google.protobuf.Value prev_config = 5;
  }
}

message UserDetails {
  string user_email = 1;
}
